Se arreglo la interfaz visual del inicio de sesion, y se termino la actualizacion de datos del usuario.

--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -35,22 +35,25 @@
         android:orientation="horizontal" />
 
     <ImageView
-        android:id="@+id/iv_Evento2"
-        android:layout_width="410dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="375dp"
+        android:id="@+id/iv_evento"
+        android:layout_width="match_parent"
+        android:layout_height="286dp"
+        android:layout_alignTop="@+id/vpImagenes"
+        android:layout_alignBottom="@+id/vpImagenes"
+        android:layout_marginTop="295dp"
+        android:layout_marginBottom="150dp"
         android:src="@drawable/btndetalles" />
 
     <Button
         android:id="@+id/botonIzquierda"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
+        android:layout_width="117dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="36dp"
         android:background="@drawable/btndetalles"
         android:fontFamily="@font/fonts"
         android:text="@string/explora_el_mapa"
@@ -58,8 +61,8 @@
 
     <Button
         android:id="@+id/botonDerecha"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
@@ -67,7 +70,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="36dp"
         android:background="@drawable/btndetalles"
         android:fontFamily="@font/fonts"
         android:text="@string/ver_el_evento"
@@ -77,19 +80,19 @@
     <fragment
         android:id="@+id/mapa_inicio"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="336dp"
-        android:layout_height="280dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignTop="@+id/vpImagenes"
         android:layout_alignBottom="@+id/puntos"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginLeft="38dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="70dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginRight="37dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
         android:layout_marginBottom="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,7 +112,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="260dp"
         android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
         android:text="EVENTO"
