--- a/app/src/main/res/layout/activity_factura.xml
+++ b/app/src/main/res/layout/activity_factura.xml
@@ -1,70 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#feac00"
     tools:context=".Activities.ActivityFactura">
 
     <TextView
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="62dp"
+        android:layout_y="628dp"
         android:text="Total Q"
         android:textSize="35dp"
         app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.227"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.764" />
+        app:layout_constraintVertical_bias="0.902" />
 
     <TextView
-        android:id="@+id/tvTotal"
+        android:id="@+id/tvTotalPagar"
         android:layout_width="178dp"
         android:layout_height="55dp"
+        android:layout_x="193dp"
+        android:layout_y="623dp"
         android:text="TextView"
         android:textSize="35dp"
         app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.875"
+        app:layout_constraintHorizontal_bias="0.798"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.763" />
+        app:layout_constraintVertical_bias="0.902" />
+
 
     <TextView
         android:id="@+id/tvChronos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="89dp"
+        android:layout_y="18dp"
         android:text="CHRONOS"
         android:textSize="60dp"
         app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.075" />
+        app:layout_constraintVertical_bias="0.024" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="115dp"
+        android:layout_y="143dp"
         android:text="Quetzaltenango, Guatemala"
         android:textSize="18dp"
         app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.259" />
+        app:layout_constraintVertical_bias="0.203" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="143dp"
+        android:layout_y="112dp"
         android:text="NIT: 123465-9"
         android:textSize="20dp"
         app:fontFamily="@font/fonts"
@@ -73,128 +86,118 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.205" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="318dp"
-        android:layout_height="23dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:text="EFACE"
-        android:textSize="18dp"
-        app:fontFamily="@font/fonts"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="220dp" />
+        app:layout_constraintVertical_bias="0.148" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="17dp"
+        android:layout_y="226dp"
         android:text="Nombre:"
         android:textSize="18dp"
         app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421" />
+        app:layout_constraintVertical_bias="0.343" />
 
     <TextView
-        android:id="@+id/tvNombre"
-        android:layout_width="286dp"
-        android:layout_height="25dp"
-        android:text="Nombre"
+        android:id="@+id/txtNombre"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_x="140dp"
+        android:layout_y="219dp"
+        android:textSize="25dp"
         app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.768"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.422" />
+        app:layout_constraintVertical_bias="0.345" />
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="NIT:"
+        android:layout_width="105dp"
+        android:layout_height="29dp"
+        android:layout_x="17dp"
+        android:layout_y="267dp"
+        android:text="Codigo Evento"
         android:textSize="18dp"
         app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.485" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="252dp"
-        android:layout_height="23dp"
-        android:text="TextView"
-        app:fontFamily="@font/fonts"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.402"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.484" />
-
-    <TextView
-        android:id="@+id/tvCantidadEntradas"
-        android:layout_width="57dp"
-        android:layout_height="33dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:text="20"
-        android:textSize="20dp"
-        app:fontFamily="@font/fonts"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.336"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.571" />
+        app:layout_constraintVertical_bias="0.4" />
 
     <TextView
         android:id="@+id/tvFecha"
         android:layout_width="122dp"
         android:layout_height="34dp"
+        android:layout_x="142dp"
+        android:layout_y="173dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="Fecha"
         android:textSize="18dp"
         app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.359" />
+        app:layout_constraintVertical_bias="0.276" />
 
     <TextView
-        android:id="@+id/textView17"
-        android:layout_width="102dp"
-        android:layout_height="38dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginRight="132dp"
-        android:text="entradas a: "
-        android:textSize="20dp"
+        android:id="@+id/txtCodigoEvento"
+        android:layout_width="254dp"
+        android:layout_height="37dp"
+        android:layout_x="141dp"
+        android:layout_y="263dp"
+        android:textSize="25dp"
         app:fontFamily="@font/fonts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.817"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.575" />
+        app:layout_constraintVertical_bias="0.403" />
 
-    <TextView
-        android:id="@+id/tvEvento"
-        android:layout_width="413dp"
-        android:layout_height="44dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:text="TextView"
-        android:textSize="20dp"
-        app:fontFamily="@font/fonts"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.636" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="362dp"
+        android:layout_height="263dp"
+        android:layout_x="32dp"
+        android:layout_y="342dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:id="@+id/llAsiento"
+                android:layout_width="118dp"
+                android:layout_height="350dp"
+                android:orientation="vertical"></LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llLocalidad"
+                android:layout_width="116dp"
+                android:layout_height="350dp"
+                android:orientation="vertical"></LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llPrecio"
+                android:layout_width="105dp"
+                android:layout_height="350dp"
+                android:orientation="vertical">
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+</AbsoluteLayout>
