--- a/app/src/main/res/layout/activity_pago_evento.xml
+++ b/app/src/main/res/layout/activity_pago_evento.xml
@@ -101,7 +101,7 @@
         app:layout_constraintVertical_bias="0.826" />
 
     <TextView
-        android:id="@+id/tvTotal"
+        android:id="@+id/tvTotalPagar"
         android:layout_width="222dp"
         android:layout_height="83dp"
         android:text="5000.00"
